--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,12 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.red {
+  color:red;
+}
+
+.bold {
+  font-weight: 700;
 }
 
 .App-header {
