--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,28 @@
   font-weight: 700;
 }
 
+.App button {
+  background-color: green;
+      color: white;
+      font: inherit;
+      border: 1px solid blue;
+      padding:8px;
+}
+
+.App button:hover{
+  background-color: lightcoral;
+  color: darkred;
+}
+
+.App button.Red {
+  background-color: red;
+}
+
+.App button.Red:hover{
+  background-color: salmon;
+  color:darkred;
+}
+
 .App-header {
   background-color: #222;
   height: 150px;
