--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -6,3 +6,9 @@
     text-align: center;
     box-shadow: 2px 2px 0px #1c1c1c;
 }
+
+@media (min-width: 500px) {
+    .Person {
+        width:450px;
+    }
+}
